📦  framer motion 추가

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "framer-motion": "^10.16.3",
     "gray-matter": "^4.0.3",
     "next": "13.4.19",
     "postcss": "8.4.29",
@@ -27,6 +28,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@svgr/webpack": "6.5.1"
+    "@svgr/webpack": "6.5.1",
+    "@types/react-syntax-highlighter": "^15.5.7"
   }
 }
