--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
     "react-syntax-highlighter": "^15.5.0",
+    "recoil": "^0.7.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
