--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^10.16.3",
     "gray-matter": "^4.0.3",
     "next": "13.4.19",
+    "next-mdx-remote": "^4.4.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
