--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-markdown": "^8.0.7",
     "react-syntax-highlighter": "^15.5.0",
     "recoil": "^0.7.7",
+    "remark-frontmatter": "^5.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
   "devDependencies": {
     "@svgr/webpack": "6.5.1",
-    "@types/react-syntax-highlighter": "^15.5.7"
+    "@types/react-syntax-highlighter": "^15.5.7",
+    "remark-gfm": "3.0"
   }
 }
