--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-syntax-highlighter": "^15.5.0",
+    "react-youtube": "^10.1.0",
     "recoil": "^0.7.7",
     "remark-frontmatter": "^5.0.0",
     "tailwindcss": "3.3.3",
