--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.1.0",
+    "@types/gtag.js": "^0.0.20",
     "@types/mdx": "^2.0.11",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
