--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@emotion/babel-preset-css-prop": "^11.12.0",
     "@emotion/react": "^11.11.1",
     "@giscus/react": "^3.0.0",
     "@mdx-js/loader": "^3.0.0",
@@ -36,9 +39,19 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "7.6.20",
+    "@storybook/addon-interactions": "7.6.20",
+    "@storybook/addon-links": "7.6.20",
+    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/blocks": "7.6.20",
+    "@storybook/nextjs": "7.6.20",
+    "@storybook/react": "7.6.20",
+    "@storybook/test": "7.6.20",
     "@svgr/webpack": "6.5.1",
     "@types/react-syntax-highlighter": "^15.5.7",
-    "remark-gfm": "3.0"
+    "eslint-plugin-storybook": "^0.8.0",
+    "remark-gfm": "3.0",
+    "storybook": "7.6.20"
   },
   "packageManager": "yarn@4.4.1"
 }
