--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "cypress": "cypress open",
+    "test": "cypress run"
   },
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^11.12.0",
@@ -48,7 +50,10 @@
     "@storybook/react": "7.6.20",
     "@storybook/test": "7.6.20",
     "@svgr/webpack": "6.5.1",
+    "@testing-library/cypress": "^10.0.2",
+    "@types/cypress": "^1.1.3",
     "@types/react-syntax-highlighter": "^15.5.7",
+    "cypress": "^13.14.2",
     "eslint-plugin-storybook": "^0.8.0",
     "remark-gfm": "3.0",
     "storybook": "7.6.20"
