--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build -o public/storybook",
     "cypress": "cypress open",
-    "test": "cypress run"
+    "test": "cypress run",
+    "start-server": "yarn start",
+    "ci": "start-server-and-test start-server http://localhost:3000 test"
   },
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^11.12.0",
@@ -57,6 +59,7 @@
     "cypress": "^13.14.2",
     "eslint-plugin-storybook": "^0.8.0",
     "remark-gfm": "3.0",
+    "start-server-and-test": "^2.0.5",
     "storybook": "7.6.20"
   },
   "packageManager": "yarn@4.4.1"
