--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build -o public/storybook",
+    "build:storybook": "storybook build -o public/storybook",
     "cypress": "cypress open",
     "test": "cypress run",
     "start-server": "yarn start",
-    "ci": "start-server-and-test start-server http://localhost:3000 test"
+    "ci": "start-server-and-test start-server http://localhost:3000 test",
+    "build:report": "ANALYZE=true yarn build"
   },
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^11.12.0",
@@ -55,11 +56,13 @@
     "@testing-library/cypress": "^10.0.2",
     "@types/cypress": "^1.1.3",
     "@types/react-syntax-highlighter": "^15.5.7",
+    "@types/webpack-bundle-analyzer": "^4",
     "cypress": "^13.14.2",
     "eslint-plugin-storybook": "^0.8.0",
     "remark-gfm": "3.0",
     "start-server-and-test": "^2.0.5",
-    "storybook": "7.6.20"
+    "storybook": "7.6.20",
+    "webpack-bundle-analyzer": "^4.10.2"
   },
   "packageManager": "yarn@4.4.1"
 }
