--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,13 @@ next-env.d.ts
 
 #.env
 .env
+
+# yarn
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
