🔧 cypress config 수정 (yarn pnp 변경 이슈)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "public/scripts/controlColorTheme.js",
-    "src/libs/ga.js"
+    "src/libs/ga.js",
+    "cypress.config.js"
   ],
   "exclude": ["node_modules"]
 }
