--- a/.github/workflows/deploy-on-main.yml
+++ b/.github/workflows/deploy-on-main.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Setup, Build, and Start App
+        uses: ./.github/actions/setup
       - name: Use Cypress Test Action
         uses: ./.github/actions/cypress-test
         with:
