👷 gitgub action 수정 (cypress-test action에 yarn install 추가)

--- a/.github/actions/cypress-test/action.yml
+++ b/.github/actions/cypress-test/action.yml
@@ -16,6 +16,9 @@ runs:
   steps:
     - name: Checkout code
       uses: actions/checkout@v4
+    - name: Install dependencies
+      run: yarn install
+      shell: bash
     - name: Run Cypress tests
       uses: cypress-io/github-action@v6
       with:
