--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/webpack-bundle-analyzer": "^4",
     "cypress": "^13.14.2",
     "eslint-plugin-storybook": "^0.8.0",
+    "pnp-webpack-plugin": "^1.7.0",
     "remark-gfm": "3.0",
     "start-server-and-test": "^2.0.5",
     "storybook": "7.6.20",
