--- a/.github/actions/cypress-test/action.yml
+++ b/.github/actions/cypress-test/action.yml
@@ -16,12 +16,12 @@ runs:
   steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    - name: Install dependencies
-      run: yarn install
-      shell: bash
     - name: Run Cypress tests
       uses: cypress-io/github-action@v6
       with:
+        working-directory: cypress
+        install-command: yarn install
+        command: yarn run --binaries-only cypress run
         build: yarn build
         start: yarn start
         wait-on: "http://localhost:3000"
