🚚 action 파일 이름 변경

--- a/.github/actions/e2e-test/action.yml
+++ b/.github/actions/e2e-test/action.yml
@@ -1,5 +1,5 @@
-name: Cypress Test
-description: Action For Cypress Test
+name: E2E Test
+description: Action For E2E Test
 inputs:
   cypress-project-id:
     description: "Cypress Project ID"
