--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "storybook": "storybook dev -p 6006",
     "build:storybook": "storybook build -o public/storybook",
     "cypress": "cypress open",
-    "test": "cypress run",
+    "test": "jest --watchAll",
+    "test:e2e": "cypress run",
     "start-server": "yarn start",
     "ci": "start-server-and-test start-server http://localhost:3000 test",
     "build:report": "ANALYZE=true yarn build"
@@ -44,6 +45,10 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-transform-react-jsx": "^7.25.9",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
     "@storybook/addon-essentials": "7.6.20",
     "@storybook/addon-interactions": "7.6.20",
     "@storybook/addon-links": "7.6.20",
@@ -54,14 +59,26 @@
     "@storybook/test": "7.6.20",
     "@svgr/webpack": "6.5.1",
     "@testing-library/cypress": "^10.0.2",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/babel__core": "^7",
+    "@types/babel__preset-env": "^7",
     "@types/cypress": "^1.1.3",
+    "@types/jest": "^29.5.14",
     "@types/react-syntax-highlighter": "^15.5.7",
     "@types/webpack-bundle-analyzer": "^4",
+    "babel-jest": "^29.7.0",
     "cypress": "^13.14.2",
     "eslint-plugin-storybook": "^0.8.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "remark-gfm": "3.0",
     "start-server-and-test": "^2.0.5",
     "storybook": "7.6.20",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "webpack-bundle-analyzer": "^4.10.2"
   },
   "packageManager": "yarn@4.4.1"
