--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gray-matter": "^4.0.3",
     "next": "13.4.19",
     "next-mdx-remote": "^4.4.1",
+    "next-router-mock": "^0.9.13",
     "next-sitemap": "^4.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
