🤡  svgr mock 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
     ".next/types/**/*.ts",
     "public/scripts/controlColorTheme.js",
     "src/libs/ga.js",
-    "cypress.config.js"
+    "cypress.config.js",
+    "__mocks__/svg.js"
   ],
   "exclude": ["cypress.config.js", "cypress", "node_modules"]
 }
