--- a/.github/actions/jest-test/action.yml
+++ b/.github/actions/jest-test/action.yml
@@ -14,5 +14,5 @@ runs:
       run: yarn install
       shell: bash
     - name: Run Jest tests
-      run: yarn test --ci # --ci는 CI 환경에서의 출력 형식 개선
+      run: yarn jest --ci
       shell: bash
