--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,7 +1,7 @@
 name: CI/CD
 on:
   push:
-    branches: [develop, main, feature/*]
+    branches: [develop, main]
   pull_request:
     types: [opened, synchronize]
 jobs:
