--- a/.github/actions/jest-test/action.yml
+++ b/.github/actions/jest-test/action.yml
@@ -14,5 +14,5 @@ runs:
       run: yarn install
       shell: bash
     - name: Run Jest tests
-      run: yarn jest --ci
+      run: yarn jest
       shell: bash
