--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build:storybook": "storybook build -o public/storybook",
+    "build-storybook": "storybook build -o public/storybook",
     "cypress": "cypress open",
     "test": "jest --watchAll",
     "test:e2e": "cypress run",
@@ -80,7 +80,9 @@
     "storybook": "7.6.20",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "webpack-bundle-analyzer": "^4.10.2"
+    "webpack": "^5.97.1",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-cli": "^6.0.0"
   },
   "packageManager": "yarn@4.4.1"
 }
