--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -11,7 +15,7 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "jsxImportSource": "@emotion/react",
     "incremental": true,
     "plugins": [
@@ -20,10 +24,16 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"],
-      "libs/*": ["./libs/*"]
+      "@/*": [
+        "./src/*"
+      ],
+      "libs/*": [
+        "./libs/*"
+      ]
     },
-    "types": ["@types/gtag.js"]
+    "types": [
+      "@types/gtag.js"
+    ]
   },
   "include": [
     "next-env.d.ts",
@@ -35,5 +45,7 @@
     "cypress.config.js",
     "__mocks__/svg.js"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
