--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.1.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/core": "^1.30.0",
+    "@opentelemetry/instrumentation": "^0.57.0",
+    "@opentelemetry/sdk-trace-base": "^1.30.0",
+    "@sentry/nextjs": "^8.47.0",
     "@types/gtag.js": "^0.0.20",
     "@types/mdx": "^2.0.11",
     "@types/node": "20.5.9",
