--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -15,7 +11,7 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "jsxImportSource": "@emotion/react",
     "incremental": true,
     "plugins": [
@@ -24,16 +20,10 @@
       }
     ],
     "paths": {
-      "@/*": [
-        "./src/*"
-      ],
-      "libs/*": [
-        "./libs/*"
-      ]
+      "@/*": ["./src/*"],
+      "libs/*": ["./libs/*"]
     },
-    "types": [
-      "@types/gtag.js"
-    ]
+    "types": ["@types/gtag.js"]
   },
   "include": [
     "next-env.d.ts",
@@ -45,7 +35,5 @@
     "cypress.config.js",
     "__mocks__/svg.js"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
